--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -36,7 +36,7 @@
     <Button
         android:layout_width="150dp"
         android:layout_height="60dp"
-        android:text="@string/gamesettings"
+        android:text="@string/aimode"
         android:id="@+id/game_set_btn"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
@@ -46,7 +46,8 @@
         android:shadowDx="2"
         android:shadowDy="2"
         android:shadowRadius="2"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:onClick="AIClick" />
 
     <Button
         android:layout_width="150dp"
