--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="cn.void_3.fourchess.Menu"
+    tools:context="org.soraworld.fourchess.MyMenu"
     android:id="@+id/menu_page"
     android:background="@drawable/starton">
 
