--- a/app/src/main/res/layout/activity_ai.xml
+++ b/app/src/main/res/layout/activity_ai.xml
@@ -1,281 +1,296 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ai_page"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="org.soraworld.fourchess.FourChess"
-    android:id="@+id/ai_page"
-    android:background="@drawable/starton">
+    android:background="@drawable/starton"
+    tools:context="org.soraworld.fourchess.mode.PPActivity">
 
     <ImageView
+        android:id="@+id/ai_back"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/ai_back"
         android:background="#00000000"
         android:contentDescription="@string/gameback"
         android:scaleType="centerCrop"
         android:src="@drawable/pic05" />
 
     <LinearLayout
-        android:orientation="horizontal"
+        android:id="@+id/aibar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/aibar"
-        android:baselineAligned="false"
-        android:paddingLeft="@dimen/radius"
-        android:paddingRight="@dimen/radius"
-        android:paddingBottom="@dimen/radius"
-        android:layout_below="@+id/ai_board"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/ai_board"
+        android:baselineAligned="false"
+        android:orientation="horizontal"
+        android:paddingBottom="@dimen/radius"
+        android:paddingLeft="@dimen/radius"
+        android:paddingRight="@dimen/radius">
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:orientation="vertical">
 
             <TextView
+                android:id="@+id/aishow"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/aishow"
-                android:textSize="18sp"
+                android:gravity="center"
+                android:maxLines="1"
                 android:shadowColor="#7e000000"
                 android:shadowDx="2"
                 android:shadowDy="2"
                 android:shadowRadius="2"
-                android:layout_weight="1"
-                android:singleLine="true"
-                android:gravity="center"
-                android:textColor="#ff00ff28" />
+                android:textColor="#ff00ff28"
+                android:textSize="18sp" />
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_weight="1">
+                android:layout_height="0dp"
+                android:orientation="horizontal">
 
                 <Button
+                    android:id="@+id/aiyes"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:id="@+id/aiyes"
+                    android:layout_margin="3dp"
                     android:layout_weight="1"
                     android:background="@drawable/game_set"
                     android:textColor="#ff0076ff"
                     android:textSize="18sp"
-                    android:singleLine="true"
-                    android:layout_margin="3dp" />
+                    android:maxLines="1" />
 
                 <Button
+                    android:id="@+id/aino"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:id="@+id/aino"
+                    android:layout_margin="3dp"
                     android:layout_weight="1"
                     android:background="@drawable/paly_chess"
                     android:textColor="#ffffaa3e"
-                    android:textSize="18sp"
-                    android:layout_margin="3dp" />
+                    android:textSize="18sp" />
             </LinearLayout>
 
         </LinearLayout>
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:layout_weight="2">
+            android:layout_weight="2"
+            android:orientation="vertical">
 
             <ImageButton
+                android:id="@+id/airetract"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/airetract"
-                android:src="@drawable/reset"
                 android:background="#00000000"
+                android:contentDescription="@string/retract"
                 android:scaleType="fitCenter"
-                android:contentDescription="@string/retract"/>
+                android:src="@drawable/reset" />
         </LinearLayout>
     </LinearLayout>
 
-    <org.soraworld.fourchess.FlowRadioGroup
+    <org.soraworld.fourchess.layout.FlowRadioGroup
+        android:id="@+id/ai_board"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:id="@+id/ai_board"
         android:layout_centerInParent="true"
-        android:background="@drawable/bigboard">
+        android:background="@drawable/bigboard"
+        android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:orientation="horizontal"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:layout_height="match_parent">
+            android:orientation="horizontal">
+
             <RadioButton
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
                 android:id="@+id/yui00"
-                android:layout_weight="1"
                 style="@style/radiobutton"
-                android:background="@drawable/red_chess"
-                android:layout_margin="15dp"
-                android:onClick="ChessClick" />
-            <RadioButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_margin="15dp"
+                android:layout_weight="1"
+                android:background="@drawable/red_chess"
+                android:onClick="ChessClick" />
+
+            <RadioButton
                 android:id="@+id/yui01"
-                android:layout_weight="1"
                 style="@style/radiobutton"
-                android:background="@drawable/red_chess"
-                android:layout_margin="15dp"
-                android:onClick="ChessClick" />
-            <RadioButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_margin="15dp"
+                android:layout_weight="1"
+                android:background="@drawable/red_chess"
+                android:onClick="ChessClick" />
+
+            <RadioButton
                 android:id="@+id/yui02"
-                android:layout_weight="1"
                 style="@style/radiobutton"
-                android:background="@drawable/red_chess"
-                android:layout_margin="15dp"
-                android:onClick="ChessClick" />
-            <RadioButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_margin="15dp"
+                android:layout_weight="1"
+                android:background="@drawable/red_chess"
+                android:onClick="ChessClick" />
+
+            <RadioButton
                 android:id="@+id/yui03"
-                android:layout_weight="1"
                 style="@style/radiobutton"
-                android:background="@drawable/red_chess"
-                android:layout_margin="15dp"
-                android:onClick="ChessClick" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:orientation="horizontal"
-            android:layout_weight="1"
-            android:layout_height="match_parent">
-            <RadioButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_margin="15dp"
+                android:layout_weight="1"
+                android:background="@drawable/red_chess"
+                android:onClick="ChessClick" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <RadioButton
                 android:id="@+id/yui10"
-                android:layout_weight="1"
                 style="@style/radiobutton"
-                android:background="@drawable/red_chess"
-                android:layout_margin="15dp"
-                android:onClick="ChessClick" />
-            <RadioButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_margin="15dp"
+                android:layout_weight="1"
+                android:background="@drawable/red_chess"
+                android:onClick="ChessClick" />
+
+            <RadioButton
                 android:id="@+id/yui11"
-                android:layout_weight="1"
                 style="@style/radiobutton"
-                android:background="@drawable/red_chess"
-                android:layout_margin="15dp"
-                android:onClick="ChessClick" />
-            <RadioButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_margin="15dp"
+                android:layout_weight="1"
+                android:background="@drawable/red_chess"
+                android:onClick="ChessClick" />
+
+            <RadioButton
                 android:id="@+id/yui12"
-                android:layout_weight="1"
                 style="@style/radiobutton"
-                android:background="@drawable/red_chess"
-                android:layout_margin="15dp"
-                android:onClick="ChessClick" />
-            <RadioButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_margin="15dp"
+                android:layout_weight="1"
+                android:background="@drawable/red_chess"
+                android:onClick="ChessClick" />
+
+            <RadioButton
                 android:id="@+id/yui13"
-                android:layout_weight="1"
                 style="@style/radiobutton"
-                android:background="@drawable/red_chess"
-                android:layout_margin="15dp"
-                android:onClick="ChessClick" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:orientation="horizontal"
-            android:layout_weight="1"
-            android:layout_height="match_parent">
-            <RadioButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_margin="15dp"
+                android:layout_weight="1"
+                android:background="@drawable/red_chess"
+                android:onClick="ChessClick" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <RadioButton
                 android:id="@+id/yui20"
-                android:layout_weight="1"
                 style="@style/radiobutton"
-                android:background="@drawable/red_chess"
-                android:layout_margin="15dp"
-                android:onClick="ChessClick" />
-            <RadioButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_margin="15dp"
+                android:layout_weight="1"
+                android:background="@drawable/red_chess"
+                android:onClick="ChessClick" />
+
+            <RadioButton
                 android:id="@+id/yui21"
-                android:layout_weight="1"
                 style="@style/radiobutton"
-                android:background="@drawable/red_chess"
-                android:layout_margin="15dp"
-                android:onClick="ChessClick" />
-            <RadioButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_margin="15dp"
+                android:layout_weight="1"
+                android:background="@drawable/red_chess"
+                android:onClick="ChessClick" />
+
+            <RadioButton
                 android:id="@+id/yui22"
-                android:layout_weight="1"
                 style="@style/radiobutton"
-                android:background="@drawable/red_chess"
-                android:layout_margin="15dp"
-                android:onClick="ChessClick" />
-            <RadioButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/yui23"
-                android:layout_weight="1"
-                style="@style/radiobutton"
-                android:background="@drawable/red_chess"
                 android:layout_margin="15dp"
+                android:layout_weight="1"
+                android:background="@drawable/red_chess"
+                android:onClick="ChessClick" />
+
+            <RadioButton
+                android:id="@+id/yui23"
+                style="@style/radiobutton"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="15dp"
+                android:layout_weight="1"
+                android:background="@drawable/red_chess"
                 android:onClick="ChessClick" />
 
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:orientation="horizontal"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:layout_height="match_parent">
+            android:orientation="horizontal">
+
             <RadioButton
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
                 android:id="@+id/yui30"
-                android:layout_weight="1"
                 style="@style/radiobutton"
-                android:background="@drawable/red_chess"
-                android:layout_margin="15dp"
-                android:onClick="ChessClick" />
-            <RadioButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_margin="15dp"
+                android:layout_weight="1"
+                android:background="@drawable/red_chess"
+                android:onClick="ChessClick" />
+
+            <RadioButton
                 android:id="@+id/yui31"
-                android:layout_weight="1"
                 style="@style/radiobutton"
-                android:background="@drawable/red_chess"
-                android:layout_margin="15dp"
-                android:onClick="ChessClick" />
-            <RadioButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_margin="15dp"
+                android:layout_weight="1"
+                android:background="@drawable/red_chess"
+                android:onClick="ChessClick" />
+
+            <RadioButton
                 android:id="@+id/yui32"
-                android:layout_weight="1"
                 style="@style/radiobutton"
-                android:background="@drawable/red_chess"
-                android:layout_margin="15dp"
-                android:onClick="ChessClick" />
-            <RadioButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/yui33"
-                android:layout_weight="1"
-                style="@style/radiobutton"
-                android:background="@drawable/red_chess"
                 android:layout_margin="15dp"
+                android:layout_weight="1"
+                android:background="@drawable/red_chess"
+                android:onClick="ChessClick" />
+
+            <RadioButton
+                android:id="@+id/yui33"
+                style="@style/radiobutton"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="15dp"
+                android:layout_weight="1"
+                android:background="@drawable/red_chess"
                 android:onClick="ChessClick" />
         </LinearLayout>
 
-    </org.soraworld.fourchess.FlowRadioGroup>
+    </org.soraworld.fourchess.layout.FlowRadioGroup>
 
 </RelativeLayout>
