--- a/app/src/main/res/layout/activity_pp.xml
+++ b/app/src/main/res/layout/activity_pp.xml
@@ -7,13 +7,10 @@
     tools:context="org.soraworld.fourchess.mode.PPActivity">
 
     <ImageView
-        android:id="@+id/game_back"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#00000000"
-        android:contentDescription="@string/gameback"
         android:scaleType="centerCrop"
-        android:src="@drawable/pic05" />
+        android:src="@drawable/pic04" />
 
     <LinearLayout
         android:id="@+id/bluebar"
@@ -41,20 +38,14 @@
                 android:id="@+id/blueshow"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
                 android:gravity="center"
-                android:shadowColor="#7e000000"
-                android:shadowDx="2"
-                android:shadowDy="2"
-                android:shadowRadius="2"
-                android:singleLine="true"
+                android:maxLines="1"
                 android:textColor="#ff00ff28"
                 android:textSize="18sp" />
 
             <LinearLayout
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
+                android:layout_height="0dp"
                 android:orientation="horizontal">
 
                 <Button
@@ -64,8 +55,8 @@
                     android:layout_margin="3dp"
                     android:layout_weight="1"
                     android:background="@drawable/game_set"
+                    android:maxLines="1"
                     android:onClick="BlueAgreeRetract"
-                    android:singleLine="true"
                     android:textColor="#ff0076ff"
                     android:textSize="18sp" />
 
@@ -80,7 +71,6 @@
                     android:textColor="#ffffaa3e"
                     android:textSize="18sp" />
             </LinearLayout>
-
         </LinearLayout>
 
         <LinearLayout
@@ -94,7 +84,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="#00000000"
-                android:contentDescription="@string/retract"
                 android:onClick="BlueRequest"
                 android:scaleType="fitCenter"
                 android:src="@drawable/reset" />
@@ -107,8 +96,6 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/chess_board"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:baselineAligned="false"
@@ -130,13 +117,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:shadowColor="#7e000000"
-                android:shadowDx="2"
-                android:shadowDy="2"
-                android:shadowRadius="2"
+                android:maxLines="1"
                 android:textColor="#ff00ff28"
-                android:textSize="18sp"
-                android:maxLines="1" />
+                android:textSize="18sp" />
 
             <LinearLayout
                 android:layout_width="fill_parent"
@@ -178,7 +161,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="#00000000"
-                android:contentDescription="@string/restart"
                 android:onClick="RedRequest"
                 android:scaleType="fitCenter"
                 android:src="@drawable/reset" />
@@ -332,7 +314,6 @@
                 android:layout_weight="1"
                 android:background="@drawable/red_chess"
                 android:onClick="ChessClick" />
-
         </LinearLayout>
 
         <LinearLayout
@@ -381,7 +362,5 @@
                 android:background="@drawable/red_chess"
                 android:onClick="ChessClick" />
         </LinearLayout>
-
     </org.soraworld.fourchess.layout.FlowRadioGroup>
-
 </RelativeLayout>
